# ImportSize

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
importsize/: __init__.py
