[tool.poetry]
name = "importsize"
version = "2020.1"
description = "Use this module to get the sizes of used imports in a project"
authors = ["FredHappyface"]
classifiers = [
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Operating System :: OS Independent"
]
homepage = "https://github.com/FHPythonUtils/ImportSize"
repository = "https://github.com/FHPythonUtils/ImportSize"
documentation = "https://github.com/FHPythonUtils/ImportSize/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
importsize = 'importsize:cli'

[tool.poetry.dependencies]
python = "^3.5"
pip = "^20.0.2"
pipreqs = "^0.4.10"
requests = "^2.23.0"

[tool.dephell.main]
from = "pyproject.toml"
to = "requirements.txt"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
